# modal-git-service

./: .env.local  .env.production  .env.test  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  doc.md  feature.md  question.md
.github/workflows/: ci.yaml
app/: __init__.py  _modal.py  logging.py  main.py  router.py  settings.py
app/git/: middleware.py  router.py  schemas.py  service.py
app/repositories/: router.py  schemas.py
tests/: conftest.py  test_main.py
tests/fixtures/: __init__.py  base.py
